Enable JFR and/or Otel agents using command line options. Added the otel-collector in the metrics docker compose setup.